# otdb

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  tests.yml
src/: opentdb_manager.py
src/opentdb_manager.egg-info/: PKG-INFO  SOURCES.txt
src/otdb/: __init__.py  opentdb_wrapper.py
src/otdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: playground.py  test_otdb.py
